--- a/index.html
+++ b/index.html
@@ -65,6 +65,23 @@
     <div class="album py-5">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/soliderz/Screenshot 17-06-2024 230349.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Solider Z</h3>
+                <p class="card-text">Sinh tồn với một khẩu lục với vô hạn đạn. Liệu bạn sẽ sống được bao lâu ?</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/solider-z?secret=9wZUiN8IiJOYxPQFWKyrWKDX5A" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/solider-z-web?secret=egIrjphdP0s7pDTktzWVKTWg0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow-sm">
@@ -76,7 +93,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/space-spector?secret=J4A0qnrmVtvs4Aq4hGn9Fho4Nk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -92,7 +109,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/kitchen-chaos?secret=tSPEvQU8eWGQw4KS2ECKvLQsCY8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -110,7 +127,7 @@
                     <a href="https://kiga-studio.itch.io/running-impact?secret=VEv7pEArHq2PPlEpyYqaHpZg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/running-impact-web?secret=ZNhWY3VjrPOMvxthReTHuitb0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -126,7 +143,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/mai-cap?secret=1AGZxeIbiHv7Ax8NqfMYYgvw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -144,7 +161,7 @@
                     <a href="https://kiga-studio.itch.io/floppy-bird?secret=ORIApYW6fBqXKjl4sg6aUFdWfI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/floppy-bird-web?secret=GBX4h2Rloz7ri7nKws7ktmLws" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">   21/05/24</small>
+                  <small class="text-body-secondary">   Free</small>
                 </div>
               </div>
             </div>
@@ -160,7 +177,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -177,7 +194,7 @@
                     <a href="https://kiga-studio.itch.io/just-aim-and-shoot?secret=1RzyJGGveRgKypmV1HBlklOYtU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/just-aim-and-shoot-web?secret=JeI7goyOc6ypbVqKpPku4p4fqHo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -193,7 +210,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/truy-kid?secret=h3c0pPvFZDKMpO7NC8X9WXU1XU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -211,7 +228,7 @@
                     <a href="https://kiga-studio.itch.io/low-parkour?secret=ac1pdHcW2XmkoyJLf8GIylpME" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/low-parkour-web?secret=N8upNECF741eEccKuY4opDkI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">   21/05/24</small>
+                  <small class="text-body-secondary">   Free</small>
                 </div>
               </div>
             </div>
@@ -229,7 +246,7 @@
                     <a href="https://kiga-studio.itch.io/merio-adventure?secret=pHGE4AQ49rf1EXzAX1YtxCH2k" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/merio-adventure-web?secret=EiCxFQ4Q3QZ0VYIzbx9ekXUloiE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">   21/05/24</small>
+                  <small class="text-body-secondary">   Free</small>
                 </div>
               </div>
             </div>
@@ -246,7 +263,7 @@
                     <a href="TryThis.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://scratch.mit.edu/projects/874792956/" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">  21/05/24</small>
+                  <small class="text-body-secondary">  Free</small>
                 </div>
               </div>
             </div>
@@ -263,7 +280,7 @@
                     <a href="https://kiga-studio.itch.io/blackjack-k?secret=ajlySw5DO2uLbPCw33qST8oz8k" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/blackjack-k-web?secret=0EUfFR9pSznlS4357ELqQT2chI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -279,7 +296,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/unity-chan-go?secret=Ge7bqHmXLqi0V5BRe8Kn8rQuY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -295,7 +312,7 @@
                   <div class="btn-group">
                     <a href="https://drive.google.com/drive/folders/1vvotTx2qurMN3Q3_R9lpKVVzLDsG-ais?usp=drive_link" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -312,7 +329,7 @@
                     <a href="https://kiga-studio.itch.io/bong?secret=PZ9hNv6uQGTneLfW7yLq0fezc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/bong-web?secret=gbEWguHHTpYYCTz10dws7LRXY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -330,7 +347,7 @@
                     <a href="https://kiga-studio.itch.io/dodge-boom-web?secret=nf1GA9drah4PplXBLkSR4FiPhc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/DodgeBoom.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24 </small>
+                  <small class="text-body-secondary">Free </small>
                 </div>
               </div>
             </div>
@@ -348,7 +365,7 @@
                     <a href="https://kiga-studio.itch.io/koutplayed-web?secret=6TtYoOLJFS53d0XzH1NW6LZWtU4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/KOutplayed!.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24 </small>
+                  <small class="text-body-secondary">Free </small>
                 </div>
               </div>
             </div>
@@ -366,7 +383,7 @@
                     <a href="https://kiga-studio.itch.io/divisor-duel-web?secret=O0B0FA6yEZA31qMrc9Re1HrQUY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/Divisor Duel.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24 </small>
+                  <small class="text-body-secondary">Free </small>
                 </div>
               </div>
             </div>
@@ -382,7 +399,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/kcaro?secret=GKBuThKXNYYoWU1EkjdwKDqKSs0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">   21/05/24</small>
+                  <small class="text-body-secondary">   Free</small>
                 </div>
               </div>
             </div>
@@ -397,7 +414,7 @@
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/kcaro-lan?secret=T2JOtQdwupDqZdr5FUHyV7z7WL8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">   21/05/24</small>
+                  <small class="text-body-secondary">   Free</small>
                 </div>
               </div>
             </div>
@@ -412,7 +429,7 @@
                   <div class="btn-group">
                     <a href="download/Pig Dodge.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -431,7 +448,7 @@
                     <a href="https://kiga-studio.itch.io/finding-number-web?secret=SrsCVCCDDphGUMf48pfutfLP7xg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/Finding Number.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
-                  <small class="text-body-secondary">   21/05/24 </small>
+                  <small class="text-body-secondary">   Free </small>
                 </div>
               </div>
             </div>
@@ -448,7 +465,7 @@
                     <a href="BattlePercent.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/battle-percent-20?secret=fU19mo6ufgowv6bx6Uo1GKLgWE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">  21/05/24</small>
+                  <small class="text-body-secondary">  Free</small>
                 </div>
               </div>
             </div>
@@ -465,7 +482,7 @@
                     <a href="EdenDragon.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/eden-dragon?secret=2QlRmN9vM9Uj5DNPskTOw6Cmjmc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">  21/05/24</small>
+                  <small class="text-body-secondary">  Free</small>
                 </div>
               </div>
             </div>
@@ -482,7 +499,7 @@
                     <a href="https://kiga-studio.itch.io/astrovila-quest-chapter-1?secret=Kr3iK6c9Nct2JhQdaigLzT8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/astrovila-quest-chapter-1-web?secret=eaCHlVkxH9oI1GFuYeVmaoEp8U" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">   21/05/24</small>
+                  <small class="text-body-secondary">   Free</small>
                 </div>
               </div>
             </div>
@@ -498,7 +515,7 @@
                     <a href="SimpleSanke.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/simple-snake?secret=lRcvSZefs7PQVkjsUE4cWm50M" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">  21/05/24</small>
+                  <small class="text-body-secondary">  Free</small>
                 </div>
               </div>
             </div>
@@ -515,7 +532,7 @@
                     <a href="BattlePercent2.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/battle-percent-21?secret=Rq3ZRNT42K5gPOgDoXy3mF8nJc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">  21/05/24</small>
+                  <small class="text-body-secondary">  Free</small>
                 </div>
               </div>
             </div>
@@ -532,7 +549,7 @@
                     <a href="Catch.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://scratch.mit.edu/projects/874924913/" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
-                  <small class="text-body-secondary">  21/05/24</small>
+                  <small class="text-body-secondary">  Free</small>
                 </div>
               </div>
             </div>
@@ -548,7 +565,7 @@
                     <a href="TaoTap.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/tao-tap?secret=r3jFk9LZ1I0BaCyV38w7fIHYHfg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
-                  <small class="text-body-secondary">  21/05/24</small>
+                  <small class="text-body-secondary">  Free</small>
                 </div>
               </div>
             </div>
@@ -562,7 +579,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                   </div>
-                  <small class="text-body-secondary">  21/05/24</small>
+                  <small class="text-body-secondary">  Free</small>
                 </div>
               </div>
             </div>
@@ -576,7 +593,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                   </div>
-                  <small class="text-body-secondary">  21/05/24</small>
+                  <small class="text-body-secondary">  Free</small>
                 </div>
               </div>
             </div>
@@ -596,7 +613,7 @@
   </footer>
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-Yv21/05/24rYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvFreerYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
