--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/space-spector?secret=J4A0qnrmVtvs4Aq4hGn9Fho4Nk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/space-spector-web?secret=UPgG2XaKDgXYX2nFOHvvJf6Vgig" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
