--- a/webs.html
+++ b/webs.html
@@ -62,21 +62,55 @@
     <div class="album py-5">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
           <div class="col">
             <div class="card shadow-sm">
-              <img src="img/kigagame.jpg" height="225"> 
+              <img src="img/calendar/Screenshot 22-07-2024 223413.jpg" height="225"> 
               <div class="card-body">
-                <h2>Kiga Webs</h2>
-                <p class="card-text">Kiga Webs là website chia sẻ những trang web của Kiga Studio, trong trang web này còn có cả games, apps thậm chí là cracks.</p>
+                <h3 class="text-info">Calendar</h3>
+                <p class="card-text">Calendar trên web</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="webs.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Go</button></a>
+                    <a href="web/calendar/index.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Go</button></a>
                   </div>
-                  <small class="text-body-secondary">21/05/24</small>
+                  <small class="text-body-secondary">2024</small>
                 </div>
               </div>
             </div>
           </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/calculator/Screenshot 22-07-2024 224537.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Calculator</h3>
+                <p class="card-text">Calculator trên web</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="web/calculator/index.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Go</button></a>
+                  </div>
+                  <small class="text-body-secondary">2024</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/autotext/Screenshot 22-07-2024 224553.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Auto Text</h3>
+                <p class="card-text">Auto Text trên web</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="web/auto_text/index.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Go</button></a>
+                  </div>
+                  <small class="text-body-secondary">2024</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          
         </div>
       </div>
     </div>
