--- a/webs.html
+++ b/webs.html
@@ -9,58 +9,129 @@
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Kiga Webs &#128195;</title>
 </head>
 
 <body class="hidden-x"> 
-  <header class="p-3 text-white bg-black">
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a href="#" class="navbar-brand d-flex align-items-center">
-          <img src="img/kiga.png" height="50" class="me-2">
-        </a>
-
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="index.html" class="nav-link px-2 text-white">Games</a></li>
-          <li><a href="apps.html" class="nav-link px-2 text-white">Apps</a></li>
-          <li><a href="webs.html" class="nav-link px-2 text-warning">Webs</a></li>
-          <li><a href="codes.html" class="nav-link px-2 text-white">Codes</a></li>
-          <li><a href="videos.html" class="nav-link px-2 text-white">Videos</a></li>
-          <li><a href="news.html" class="nav-link px-2 text-white">News</a></li>
-        </ul>
-
-        <div class="text-end">
-          <a href="https://www.youtube.com/channel/UCnbIUsnpXaXXc7Y9SeCZ4OA" target="_blank"><button type="button" class="btn btn-outline-light me-2">Youtube</button></a>
-          <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-outline-light me-2">Facebook</button></a>
-          <a href="https://github.com/KietGa" target="_blank"><button type="button" class="btn btn-outline-light me-2">Github</button></a>
-          <a href="Donate.html" target="_blank"><button type="button" class="btn btn-warning">Donate</button></a>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <main class="">
-    <section class="py-5 text-center bg-dark">
-      <div class="row">
-        <div class="col-1">
-        </div>
-        <div class="col py-lg-4">
-          <h1 class="fw-light text-white press-start">Kiga Webs</h1> <br>
-          <p class="lead text-y text-info">Blue: New Webs</p>
-          <p class="lead text-y text-success">Green: New Update</p>
-          <p class="lead text-y text-danger">Red: Shut Down</p>
-        </div>
-        <div class="col">
-          <img src="img/kigagame.jpg" width="420" height="240">
-        </div>
-        <div class="col-1">
-        </div>
-      </div>
-    </section>
+  <body class="hidden-x"> 
+    <header class="">
+      <div class="px-3 py-2 text-white bg-black">
+        <div class="container">
+          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none" previewlistener="true">
+              <img src="img/kiga.png" height="50" class="me-2">
+            </a>
   
-    <div class="album py-5"> 
+            <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+              <li>
+                <a href="index.html" class="nav-link text-white">
+                  <img class="bi d-block mx-auto mb-1" src="img/icon/game.png" height="24" class="me-2">
+                  Game
+                </a>
+              </li>
+              <li>
+                <a href="apps.html" class="nav-link text-white">
+                  <img class="bi d-block mx-auto mb-1" src="img/icon/app.png" height="24" class="me-2">
+                  App
+                </a>
+              </li>
+              <li>
+                <a href="webs.html" class="nav-link text-secondary">
+                  <img class="bi d-block mx-auto mb-1" src="img/icon/web.png" height="24" class="me-2">
+                  Web
+                </a>
+              </li>
+              <li>
+                <a href="codes.html" class="nav-link text-white">
+                  <img class="bi d-block mx-auto mb-1" src="img/icon/code.png" height="24" class="me-2">
+                  Code
+                </a>
+              </li>
+              <li>
+                <a href="videos.html" class="nav-link text-white">
+                  <img class="bi d-block mx-auto mb-1" src="img/icon/video.png" height="24" class="me-2">
+                  Video
+                </a>
+              </li>
+              <li>
+                <a href="news.html" class="nav-link text-white">
+                  <img class="bi d-block mx-auto mb-1" src="img/icon/news.png" height="24" class="me-2">
+                  News
+                </a>
+              </li>
+              <li>
+                <a href="Donate.html" class="nav-link text-white">
+                  <img class="bi d-block mx-auto mb-1" src="img/icon/donate.png" height="24" class="me-2">
+                  Donate
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+    
+    <main class="">
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/calendar/Screenshot 22-07-2024 223413.jpg" class="d-block w-100 styleSlide" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Calendar</h5>
+              <p>Calendar trên web</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/calculator/Screenshot 22-07-2024 224537.jpg" class="d-block w-100 styleSlide" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Calculator</h5>
+              <p>Calculator trên web.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/autotext/Screenshot 22-07-2024 224553.jpg" class="d-block w-100 styleSlide" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Auto Text</h5>
+              <p>Auto Text trên web.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" style="visibility: hidden;">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" style="visibility: hidden;">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+  
+      <section class="py-5 text-center">
+        <div class="row">
+          <div class="col-4">
+            <img src="img/bg/Picture1.png" alt="" width="400">
+          </div>
+          <div class="col">
+            <h1 class="fw-light press-start">Kiga Webs</h1> <br>
+            <p class="lead text-y text-info">Blue: New Web</p>
+            <p class="lead text-y text-success">Green: New Update</p>
+            <p class="lead text-y text-warning">Yellow: Hot Web</p>
+            <p class="lead text-y text-danger">Red: Shut Down</p>
+            <video width="100%"  autoplay muted>
+              <source src="video/0311.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="col-4">
+            <img src="img/bg/Picture2.png" alt="" width="550">
+          </div>
+        </div>
+      </section>
+  
+    <div class="album py-5 bg-black"> 
       <div class="container">
+        <h1 class="fw-light press-start text-center text-white styleHeader">Web Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
           <div class="col">
@@ -111,23 +182,78 @@
             </div>
           </div>
 
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/buttonripple/Screenshot 30-07-2024 195011.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Button Ripple</h3>
+                <p class="card-text">Button Ripple trên web</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="web/button_ripple/index.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Go</button></a>
+                  </div>
+                  <small class="text-body-secondary">2024</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/hearttrail/Screenshot 30-07-2024 195117.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Heart Trail</h3>
+                <p class="card-text">Heart Trail trên web</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="web/heart_trail/index.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Go</button></a>
+                  </div>
+                  <small class="text-body-secondary">2024</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/randomphoto/Screenshot 30-07-2024 195144.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Random Photos</h3>
+                <p class="card-text">Random Photos trên web</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="web/random_image/index.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Go</button></a>
+                  </div>
+                  <small class="text-body-secondary">2024</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
   </main>
   
-  <footer class="text-body-secondary py-5">
-    <div class="container">
-      <p class="float-end mb-1">
-        <a href="#">Back to top</a>
-      </p>
-      <p class="mb-1">Bản quyền &copy; Kiga Studio 2024</p>
-    </div>
-  </footer>
-</body>
+  <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <p class="col-md-4 mb-0 text-body-secondary">© 2024 Kiga Studio</p>
+  
+      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none" previewlistener="true">
+        <img src="img/kiga.png" height="30" class="me-2">
+      </a>
+  
+      <ul class="nav col-md-4 justify-content-end">
+        <a href="https://www.youtube.com/channel/UCnbIUsnpXaXXc7Y9SeCZ4OA" target="_blank"><img src="img/icon/Dakirby309-Simply-Styled-YouTube.48.png" height="30" class="me-2"></a>
+        <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><img src="img/icon/Danleech-Simple-Facebook.48.png" height="30" class="me-2"></a>
+        <a href="https://github.com/KietGa" target="_blank"><img src="img/icon/Limav-Flat-Gradient-Social-Github.48.png" height="30" class="me-2"></a>
+      </ul>
+    </footer>
+  </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvFreerYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-
+<script src="index.js"></script>
+</body>
 </html>
