--- a/index.html
+++ b/index.html
@@ -55,12 +55,6 @@
               </a>
             </li>
             <li>
-              <a href="news.html" class="nav-link text-white">
-                <img class="bi d-block mx-auto mb-1" src="img/icon/news.png" height="24" class="me-2">
-                News
-              </a>
-            </li>
-            <li>
               <a href="Donate.html" class="nav-link text-white">
                 <img class="bi d-block mx-auto mb-1" src="img/icon/donate.png" height="24" class="me-2">
                 Donate
@@ -73,6 +67,7 @@
   </header>
   
   <main class="">
+
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -97,10 +92,6 @@
           </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" style="visibility: hidden;">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" style="visibility: hidden;">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
@@ -109,8 +100,8 @@
 
     <section class="py-5 text-center">
       <div class="row">
-        <div class="col-4">
-          <img src="img/bg/Picture1.png" alt="" width="400">
+        <div class="col-3">
+          <img src="img/bg/Picture1.png" alt="" width="90%" style="padding-top: 50px;">
         </div>
         <div class="col">
           <h1 class="fw-light press-start">Kiga Games</h1> <br>
@@ -122,8 +113,8 @@
             <source src="video/0311.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="col-4">
-          <img src="img/bg/Picture2.png" alt="" width="550">
+        <div class="col-3">
+          <img src="img/bg/Picture2.png" alt="" width="130%" style="padding-top: 50px;">
         </div>
       </div>
     </section>
