--- a/webs.html
+++ b/webs.html
@@ -56,12 +56,6 @@
                 </a>
               </li>
               <li>
-                <a href="news.html" class="nav-link text-white">
-                  <img class="bi d-block mx-auto mb-1" src="img/icon/news.png" height="24" class="me-2">
-                  News
-                </a>
-              </li>
-              <li>
                 <a href="Donate.html" class="nav-link text-white">
                   <img class="bi d-block mx-auto mb-1" src="img/icon/donate.png" height="24" class="me-2">
                   Donate
@@ -110,21 +104,21 @@
   
       <section class="py-5 text-center">
         <div class="row">
-          <div class="col-4">
-            <img src="img/bg/Picture1.png" alt="" width="400">
+          <div class="col-3">
+            <img src="img/bg/Picture1.png" alt="" width="90%" style="padding-top: 50px;">
           </div>
           <div class="col">
-            <h1 class="fw-light press-start">Kiga Webs</h1> <br>
-            <p class="lead text-y text-info">Blue: New Web</p>
+            <h1 class="fw-light press-start">Kiga Games</h1> <br>
+            <p class="lead text-y text-info">Blue: New Game</p>
             <p class="lead text-y text-success">Green: New Update</p>
-            <p class="lead text-y text-warning">Yellow: Hot Web</p>
+            <p class="lead text-y text-warning">Yellow: Hot Game</p>
             <p class="lead text-y text-danger">Red: Shut Down</p>
             <video width="100%"  autoplay muted>
               <source src="video/0311.mp4" type="video/mp4">
             </video>
           </div>
-          <div class="col-4">
-            <img src="img/bg/Picture2.png" alt="" width="550">
+          <div class="col-3">
+            <img src="img/bg/Picture2.png" alt="" width="130%" style="padding-top: 50px;">
           </div>
         </div>
       </section>
