--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </a>
             </li>
             <li>
-              <a href="Donate.html" class="nav-link text-white">
+              <a href="Donate.html" class="nav-link text-warning">
                 <img class="bi d-block mx-auto mb-1" src="img/icon/donate.png" height="24" class="me-2">
                 Donate
               </a>
