--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <img src="img/tootherside/Screenshot 03-08-2024 184753.jpg" class="d-block w-100 styleSlide" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>To Other Side</h5>
+            <p>Từ tay không đến khám phá vùng đất mới.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
           <img src="img/soliderz/Screenshot 17-06-2024 230349.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>SoliderZ</h5>
@@ -82,13 +89,6 @@
           <div class="carousel-caption d-none d-md-block">
             <h5>Space Spector</h5>
             <p>Game phản xạ cực cuốn. Phiên bản nâng cấp của game khủng long với nhiều tính năng cực căng.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="img/kitchenchaos/Screenshot 09-06-2024 232324.jpg" class="d-block w-100 styleSlide" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Kitchen Chaos</h5>
-            <p>Siêu phẩm game mùa hè năm nay! Giả lập làm đầu bếp quán mắc đô nờ. Sẽ có Update siêu lớn trong tương lai.</p>
           </div>
         </div>
       </div>
@@ -123,6 +123,23 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/tootherside/Screenshot 03-08-2024 184753.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">To Other Side (Beta)</h3>
+                <p class="card-text">Từ tay không đến khám phá vùng đất mới.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/to-other-side?secret=SMQqMeJ9Xd16sl52AWEK3SJehTw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col">
             <div class="card shadow-sm styleNew">
               <img src="img/soliderz/Screenshot 17-06-2024 230349.jpg" height="225"> 
