--- a/index.html
+++ b/index.html
@@ -71,24 +71,24 @@
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/tootherside/Screenshot 03-08-2024 184753.jpg" class="d-block w-100 styleSlide" alt="...">
+          <img src="img/hiddenblock/Screenshot 08-09-2024 214839.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>To Other Side</h5>
-            <p>Từ tay không đến khám phá vùng đất mới.</p>
+            <h5>Hidden Block</h5>
+            <p>Low Parkour nhưng mà ở đắng cấp khác. Cú nhảy may mắn - Cái chết bất ngờ!</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/soliderz/Screenshot 17-06-2024 230349.jpg" class="d-block w-100 styleSlide" alt="...">
+          <img src="img/chigybird/Screenshot 08-09-2024 214932.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>SoliderZ</h5>
-            <p>Sinh tồn với một khẩu lục với vô hạn đạn. Liệu bạn sẽ sống được bao lâu ?</p>
+            <h5>Chigy Birds</h5>
+            <p>Angry Birds Fake 99%</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/spacespector/Screenshot 12-06-2024 164740.jpg" class="d-block w-100 styleSlide" alt="...">
+          <img src="img/soloshooting/Screenshot 08-09-2024 215016.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Space Spector</h5>
-            <p>Game phản xạ cực cuốn. Phiên bản nâng cấp của game khủng long với nhiều tính năng cực căng.</p>
+            <h5>Solo Shooting</h5>
+            <p>Solo bắn súng nhưng mà nó lạ lắm.</p>
           </div>
         </div>
       </div>
@@ -126,6 +126,54 @@
 
           <div class="col">
             <div class="card shadow-sm styleNew">
+              <img src="img/hiddenblock/Screenshot 08-09-2024 214839.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Hidden Block</h3>
+                <p class="card-text">Low Parkour nhưng mà ở đắng cấp khác. Cú nhảy may mắn - Cái chết bất ngờ!</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/hidden-block?secret=wFNZ5mzdJfPZ9U6TusqOMsQ6d7E" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/chigybird/Screenshot 08-09-2024 214932.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Chigy Birds</h3>
+                <p class="card-text">Angry Birds Fake 99%</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/chigy-birds?secret=H5M2VHhqTldyFP1PixBnoziWOck" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/soloshooting/Screenshot 08-09-2024 215016.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Solo Shooting</h3>
+                <p class="card-text">Solo bắn súng nhưng mà nó lạ lắm.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/solo-shooting?secret=y1W1iWnmzzMaTGb7W12uf4ozQ4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
               <img src="img/tootherside/Screenshot 03-08-2024 184753.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-info">To Other Side (Beta)</h3>
@@ -133,56 +181,6 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/to-other-side?secret=SMQqMeJ9Xd16sl52AWEK3SJehTw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/soliderz/Screenshot 17-06-2024 230349.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info">Solider Z</h3>
-                <p class="card-text">Sinh tồn với một khẩu lục với vô hạn đạn. Liệu bạn sẽ sống được bao lâu ?</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="https://kiga-studio.itch.io/solider-z?secret=9wZUiN8IiJOYxPQFWKyrWKDX5A" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="https://kiga-studio.itch.io/solider-z-web?secret=egIrjphdP0s7pDTktzWVKTWg0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/spacespector/Screenshot 12-06-2024 164740.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info">Space Spector</h3>
-                <p class="card-text">Game phản xạ cực cuốn. Phiên bản nâng cấp của game khủng long với nhiều tính năng cực căng.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="https://kiga-studio.itch.io/space-spector?secret=J4A0qnrmVtvs4Aq4hGn9Fho4Nk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="https://kiga-studio.itch.io/space-spector-web?secret=UPgG2XaKDgXYX2nFOHvvJf6Vgig" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-           <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/kitchenchaos/Screenshot 09-06-2024 232324.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info">Kitchen Chaos</h3>
-                <p class="card-text">Siêu phẩm game mùa hè năm nay! Giả lập làm đầu bếp quán mắc đô nờ. Sẽ có Update siêu lớn trong tương lai.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="https://kiga-studio.itch.io/kitchen-chaos?secret=tSPEvQU8eWGQw4KS2ECKvLQsCY8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -237,6 +235,39 @@
                     <a href="https://kiga-studio.itch.io/floppy-bird-web?secret=GBX4h2Rloz7ri7nKws7ktmLws" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">   Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/spacespector/Screenshot 12-06-2024 164740.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-warning">Space Spector</h3>
+                <p class="card-text">Game phản xạ cực cuốn. Phiên bản nâng cấp của game khủng long với nhiều tính năng cực căng.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/space-spector?secret=J4A0qnrmVtvs4Aq4hGn9Fho4Nk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/space-spector-web?secret=UPgG2XaKDgXYX2nFOHvvJf6Vgig" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/kitchenchaos/Screenshot 09-06-2024 232324.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-warning">Kitchen Chaos</h3>
+                <p class="card-text">Siêu phẩm game mùa hè năm nay! Giả lập làm đầu bếp quán mắc đô nờ. Sẽ có Update siêu lớn trong tương lai.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/kitchen-chaos?secret=tSPEvQU8eWGQw4KS2ECKvLQsCY8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
@@ -339,6 +370,23 @@
                     <a href="https://scratch.mit.edu/projects/874792956/" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">  Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/soliderz/Screenshot 17-06-2024 230349.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text">Solider Z</h3>
+                <p class="card-text">Sinh tồn với một khẩu lục với vô hạn đạn. Liệu bạn sẽ sống được bao lâu ?</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/solider-z?secret=9wZUiN8IiJOYxPQFWKyrWKDX5A" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/solider-z-web?secret=egIrjphdP0s7pDTktzWVKTWg0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
