--- a/FindingNumber.html
+++ b/FindingNumber.html
@@ -27,6 +27,7 @@
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
+      <p>-<b>Back to Kiga Games</b>: <a href="https://kiga-studio.itch.io/astrovila-quest-chapter-1?secret=Kr3iK6c9Nct2JhQdaigLzT8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
       <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/finding-number?secret=X8FJeECje1TzmYZhdUfQhU36n88" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
         <p>-<b>Play Now</b>: <a href="https://kiga-studio.itch.io/finding-number-web?secret=SrsCVCCDDphGUMf48pfutfLP7xg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
           <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
@@ -69,9 +70,6 @@
 </div>
 </div>
 <div class="d-flex gap-2 justify-content-center py-5 bg-dark">
-  <span class="badge bg-light-subtle rounded-pill"><a href="LowParkour.html">Previous Game</a></span>
-  <span class="badge bg-light-subtle rounded-pill"><a href="index.html">Home</a></span>
-  <span class="badge bg-light-subtle rounded-pill"><a href="RunningImpact.html">Next Game</a></span>
 </div>
 </body>
 
