--- a/FloppyBird.html
+++ b/FloppyBird.html
@@ -27,6 +27,7 @@
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
+      <p>-<b>Back to Kiga Games</b>: <a href="https://kiga-studio.itch.io/astrovila-quest-chapter-1?secret=Kr3iK6c9Nct2JhQdaigLzT8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
       <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/floppy-bird?secret=ORIApYW6fBqXKjl4sg6aUFdWfI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
       <p>-<b>Play Now</b> <a href="https://kiga-studio.itch.io/floppy-bird-web?secret=GBX4h2Rloz7ri7nKws7ktmLws" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
       <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
@@ -65,9 +66,6 @@
 </div>
 </div>
 <div class="d-flex gap-2 justify-content-center py-5 bg-dark">
-  <span class="badge bg-light-subtle rounded-pill"><a href="BattlePercent.html">Previous Game</a></span>
-  <span class="badge bg-light-subtle rounded-pill"><a href="index.html">Home</a></span>
-  <span class="badge bg-light-subtle rounded-pill"><a href="MerioAdventure.html">Next Game</a></span>
 </div>
 </body>
 
