--- a/RunningImpact.html
+++ b/RunningImpact.html
@@ -27,6 +27,7 @@
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
+      <p>-<b>Back to Kiga Games</b>: <a href="https://kiga-studio.itch.io/astrovila-quest-chapter-1?secret=Kr3iK6c9Nct2JhQdaigLzT8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
       <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/running-impact?secret=VEv7pEArHq2PPlEpyYqaHpZg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
       <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
@@ -64,9 +65,6 @@
 </div>
 </div>
 <div class="d-flex gap-2 justify-content-center py-5 bg-dark">
-  <span class="badge bg-light-subtle rounded-pill"><a href="FindingNumber.html">Previous Game</a></span>
-  <span class="badge bg-light-subtle rounded-pill"><a href="index.html">Home</a></span>
-  <span class="badge bg-light-subtle rounded-pill"><a href="#">Next Game</a></span>
 </div>
 </body>
 
