--- a/BattlePercent.html
+++ b/BattlePercent.html
@@ -27,7 +27,7 @@
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
-      <p>-<b>Back to Kiga Games</b>: <a href="https://kiga-studio.itch.io/astrovila-quest-chapter-1?secret=Kr3iK6c9Nct2JhQdaigLzT8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
+      <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
       <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/battle-percent-20?secret=fU19mo6ufgowv6bx6Uo1GKLgWE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
       <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
