--- a/VisualAnimePP.html
+++ b/VisualAnimePP.html
@@ -28,11 +28,12 @@
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
-      <p>-<b>Back to Kiga Games</b>: <a href="https://kiga-studio.itch.io/astrovila-quest-chapter-1?secret=Kr3iK6c9Nct2JhQdaigLzT8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
+      <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
       <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/game-visual-alime-power-point?secret=4kbd7t67YIs9cNhQOJMyKjPW0t4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
         <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
+  
 <div id="carouselExampleIndicators" class="bg-dark carousel slide col-md-10">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -75,6 +76,7 @@
 </div>
 
 <div class="d-flex gap-2 justify-content-center py-5 bg-dark">
+
 </div>
 </body>
 
