--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                 <p class="card-text">Angry Birds Fake 99%</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="ChigyBird.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/chigy-birds?secret=H5M2VHhqTldyFP1PixBnoziWOck" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
