--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://kiga-studio.itch.io/hidden-block?secret=wFNZ5mzdJfPZ9U6TusqOMsQ6d7E" class="d-block w-100 styleSlide" alt="...">
+          <img src="img/chigybird/Screenshot 08-09-2024 214932.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Chigy Birds</h5>
             <p>Angry Birds Fake 99%</p>
